# KisaanVaani

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  start.sh
api/routes/: rag.py
api/schemas/: request.py  response.py
rag/: ingest.py  intent_router.py  main.py  prompt_factory.py  retriever.py  vector_store.py
utils/: language_enum.py
voice/: generate_token.py  groq_llm.py  livekit_transport.py  main.py  rag_processor.py  sarvam_stt.py  sarvam_tts.py  web_agent.py
